Bug fixes, code cleanup and import optimizing